K8s/learning-modules/Module-16-Ingress-and-TLS/stage/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-web
  namespace: student-app
spec:
  ingressClassName: nginx
  rules:
    - host: student-web.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: student-web
                port:
                  number: 80
